--- a/style.css
+++ b/style.css
@@ -34,18 +34,20 @@ header figure img{
 main{
     background-color: white;
     display: flex;
-    align-items: flex-start;
+    /*align-items: flex-start; */
 }
 
 nav{
     display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
+    justify-content: center;
+    flex-direction: row;
     background-color: #1791FF;
     align-items: center;
-    flex: 1;
-    margin: 1em;
     padding: 1em;
+}
+.dashed{
+    margin : 0;
+    border-bottom: 3px #116dbe dashed;
 }
 article{
     flex: 3;
@@ -55,19 +57,29 @@ article h1{
     color: rgb(236, 201, 3);
 }
 aside{
-    flex: 1.5;
-    padding: 2em;
+    padding: 1em;
     background-color: #1791FF;
     color: white;
     text-align: justify;
     margin: 1em;
+    width: 300px;
 }
-aside h2{
+aside h2, aside small{
     text-align: center;
+    margin: 0;
+}
+
+#legende{
+    margin: 0;
+    text-align: center;
+    font-size: smaller;
+    font-style: italic;
 }
 aside img{
+    
     border: 1px solid white;
-    height: 200px;
+    height: 300px;
+    width: 200px;
 }
 
 a{
@@ -82,4 +94,15 @@ footer{
 }
 footer p{
     padding: 5px;
+}
+
+#grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1%;
+    margin: 0;
+}
+
+#grid img{
+    width: 100%;
 }
