--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ nav{
 article{
     flex: 3;
     text-align: justify;
+    margin: 1em;
 }
 article h1{
     color: rgb(236, 201, 3);
@@ -85,6 +86,8 @@ aside img{
 a{
     margin: 5px;
     color: white;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 footer{
     height: 25px;
@@ -105,4 +108,5 @@ footer p{
 
 #grid img{
     width: 100%;
+    border: 1px solid black;
 }
